# dj_materialized_views

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  mkdocs.yml  requirements.txt  setup.cfg  setup.py
.github/conf/: settings.py
.github/workflows/: django.yml
dj_materialized_views/: admin.py  apps.py  models.py  tasks.py  utils.py
dj_materialized_views/admin/: __init__.py  actions.py  admin.py
dj_materialized_views/migrations/: 0001_initial.py
dj_materialized_views/models/: __init__.py  materialized_view.py  materialized_view_index.py
dj_materialized_views/tests/: tests.py
docs/: index.md  install.md  quick_start.md  update.md
